# tg_bot_personal_assistant

./: .gitignore  pyproject.toml  requirements.txt
src/: bot.py
src/agent/: agent.py
